force-app/main/default/objects/MA_Page_Section__c/MA_Page_Section__c.object-meta.xml
<CustomObject>
    <description>One row per section of a rendered page template. Holds the section's order, label and layout type, so a page's structure is data rather than markup. MA_Page_Content__c rows attach to a section by Section_Key__c. Offering-agnostic: a new offering is a new set of rows, not new code.</description>
    <label>Page Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>