force-app/main/default/objects/MA_Page_Section__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Guidance shown under the section name in the editor.</description>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>