force-app/main/default/objects/MA_Page_Section__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Human-readable name shown in the GTM Content Manager rail.</description>
    <label>Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>