force-app/main/default/objects/MA_Page_Section__c/fields/Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>Layout_Type__c</fullName>
    <description>Which renderer draws this section. Content and order are data; the set of layout types is the design system and does require code to extend.</description>
    <label>Layout Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>page-chrome</fullName>
            </value>
            <value>
                <fullName>hero</fullName>
            </value>
            <value>
                <fullName>lede-chips</fullName>
            </value>
            <value>
                <fullName>route-proof</fullName>
            </value>
            <value>
                <fullName>card-grid</fullName>
            </value>
            <value>
                <fullName>stat</fullName>
            </value>
            <value>
                <fullName>use-pitch</fullName>
            </value>
            <value>
                <fullName>faq</fullName>
            </value>
            <value>
                <fullName>closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>