force-app/main/default/objects/MA_Page_Section__c/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <description>Matches MA_Offering__mdt.Offering_Key__c.</description>
    <label>Offering Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>