force-app/main/default/objects/MA_Page_Section__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Position of this section on the page, ascending. This is what the Rearrange control writes.</description>
    <label>Sort Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>