force-app/main/default/objects/MA_Page_Section__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>Which page template this section belongs to. Mirrors MA_Page_Content__c.Template_Type__c.</description>
    <label>Template Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>story</fullName>
            </value>
            <value>
                <fullName>offerings-listing</fullName>
            </value>
            <value>
                <fullName>offerings-page</fullName>
            </value>
            <value>
                <fullName>industry-chooser</fullName>
            </value>
            <value>
                <fullName>configurator</fullName>
            </value>
            <value>
                <fullName>faq-bd</fullName>
            </value>
            <value>
                <fullName>faq-content-manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>